# rpc-server

./: CMakeLists.txt  Cargo.toml  Containerfile  DemoServiceImpl.cs  Gemfile  Package.swift  Program.cs  build.gradle  build.gradle.kts  build.sbt  composer.json  demo_server.cc  demo_server.php  demo_server.rb  go.mod  mix.exs  package.json  pubspec.yaml  requirements.txt  server.csproj  server.go  server.php  server.py  server.rb  server.ts
Sources/: main.swift
lib/: application.ex  endpoint.ex  server.ex
src/: lib.rs  main.rs
src/main/java/: DemoServer.java  Server.java
src/main/java/demo/v1/: DemoServiceGrpc.java
src/main/kotlin/: DemoServer.kt
src/main/scala/: DemoServer.scala  Server.scala
